added button for changing table status to taken

--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -11,12 +11,15 @@
 
 <template name="table">
     <div class="column">
-        <div class="ui black inverted segment">
+	    <div  class="ui black inverted segment">
             Table {{table_id}}<br>
             Size  {{size}}<br>
             Table Status {{table_status}}<br>
             Table Type {{table_type}}<br>
             Reservation Interval {{reservation_intv}}<br>
+	    <button class="set_taken" id="{{id}}" type="button">Taken</button>
+
+
         </div>
     </div>
 </template>
