--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -1,5 +1,36 @@
 <template name="floorplan">
-    WIP
+    <div class="ui four column grid">
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+        {{>table}}
+
+
+    </div>
+    <!--<div class="ui modal">-->
+        <!--<div class="header">Header{{this._id}}</div>-->
+    <!--</div>-->
 </template>
+
+<template name="table">
+    <div class="column">
+        <div class="ui black inverted segment">Table#<br><br><br><br><br></div>
+    </div>
+</template>
+
+
+
 
 
