--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -11,11 +11,14 @@
 
 <template name="table">
     <div class="column">
-        <div class="ui black inverted segment">{{> tableid}}</div>
+        <div class="ui black inverted segment">
+            Table {{table_id}}<br>
+            <!--Size  {{size}}<br>-->
+            <!--Table Status {{table_status}}<br>-->
+            <!--Table Type {{table_type}}<br>-->
+            <!--Reservation Interval {{reservation_intv}}<br>-->
+        </div>
     </div>
-</template>
-<template name="tableid">
-    {{table_id}}
 </template>
 
 
