--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -13,10 +13,10 @@
     <div class="column">
         <div class="ui black inverted segment">
             Table {{table_id}}<br>
-            <!--Size  {{size}}<br>-->
-            <!--Table Status {{table_status}}<br>-->
-            <!--Table Type {{table_type}}<br>-->
-            <!--Reservation Interval {{reservation_intv}}<br>-->
+            Size  {{size}}<br>
+            Table Status {{table_status}}<br>
+            Table Type {{table_type}}<br>
+            Reservation Interval {{reservation_intv}}<br>
         </div>
     </div>
 </template>
