--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -32,7 +32,8 @@
             Table Status {{table_status}}<br>
             Table Type {{table_type}}<br>
             Reservation Interval {{reservation_intv}}<br>
-	    <button class="set_taken" id="{{id}}" type="button">Taken</button>
+	  
+  <button class="ui teal button">Taken</button>
 
         </div>
     </div>
