added loading icons

--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -24,15 +24,15 @@
                 </a>
             {{else if isTaken}}
                 <a class="ui yellow right corner label">
-                    <i class="check outline icon"></i>
+                    <i class="notched circle loading icon"></i>
                 </a>
             {{/if}}
-            Table1 {{table_id}}<br>
+            Table {{table_id}}<br>
             Size  {{size}}<br>
             Table Status {{table_status}}<br>
             Table Type {{table_type}}<br>
-            Reservation Interval {{reservation_intv}}<br>
-	  
+<!--             Reservation Interval {{reservation_intv}}<br>
+ -->	  
   <button class="ui teal button">Taken</button>
 
         </div>
