--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -9,7 +9,7 @@
 
 <template name="table">
     <div class="column">
-        <div class="ui black inverted segment">
+        <div class="ui inverted segment">
             {{#if isDirty}}
                 <a class="ui red right corner label">
                     <i class="trash outline icon"></i>
@@ -20,30 +20,31 @@
                 </a>
             {{else if isReserved}}
                 <a class="ui gray right corner label">
-                    <i class="check outline icon"></i>
+                    <i class="checked calendar icon"></i>
                 </a>
+
             {{else if isTaken}}
                 <a class="ui yellow right corner label">
                     <i class="notched circle loading icon"></i>
                 </a>
             {{/if}}
-            Table {{table_id}}<br>
-            Size  {{size}}<br>
-            Table Status {{table_status}}<br>
-            Table Type {{table_type}}<br>
-<!--             Reservation Interval {{reservation_intv}}<br>
- -->	  
-  <button class="ui teal button">Taken</button>
+            <div class="tableNum"><i class="users icon"> {{occupants}}/{{size}}</i>Table {{table_id}}</div>
+
+            {{#if isReserved}}
+                <h2> Reserved for name: </h2>
+                insert time here
+                Table Type {{table_type}}<br>
+                {{else}}
+                <br>
+
+                Table Type {{table_type}}<br>
+                <!--             Reservation Interval {{reservation_intv}}<br>
+                 -->
+                <!--<button class="ui teal button">Taken</button>-->
+                {{/if}}
+
 
         </div>
-    </div>
-    <div class="ui modal" id="{{id}}">
-        <div class="header">
-            Header{{this._id}}
-            <br>
-            {{table_id}}
-        </div>
-
     </div>
 </template>
 
