--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -1,35 +1,71 @@
 <template name="orderQueue">
 
     <div class="ui sizer vertical segment">
-        <div class="ui huge header">Order Queue Management</div>
+        <div class="ui center aligned huge header">Order Queue</div>
     </div>
+{{#HammerTouchArea gestureMap=templateGestures}}
+    <div class="ui internally celled center aligned grid">
+      <div class="grey rounded spaced row">
+        <div class="two wide column">
+          Order ID
+        </div>
+        <div class="three wide column">
+          Item
+        </div>
+        <div class="two wide column">
+          Type
+        </div>
+        <div class="one wide column">
+          Quantity
+        </div>
+        <div class="eight wide column">
+          Description
+        </div>
+      </div>
 
-    <div class="ui card">
-        <div class="image">
-            <img src="/images/avatar2/large/kristy.png">
-        </div>
-        <div class="content">
-            <a class="header">Kristy</a>
-            <div class="meta">
-                <span class="date">Joined in 2013</span>
-            </div>
-            <div class="description">
-                Kristy is an art director living in New York.
-            </div>
-        </div>
-        <div class="extra content">
-            <a>
-                <i class="user icon"></i>
-                22 Friends
-            </a>
-        </div>
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
+      {{>orderRow}}
     </div>
-
-
-
-
-
-
+    {{/HammerTouchArea}}
 </template>
 
 
+<template name="orderRow">
+
+  <div class="white rounded row" id="hammertap">
+    <div class="two wide column">
+      145
+    </div>
+    <div class="three wide column">
+      Fries
+    </div>
+    <div class="two wide column">
+      Appetizer
+    </div>
+    <div class="one wide column">
+      2
+    </div>
+    <div class="eight wide column">
+      Classic
+    </div>
+  </div>
+
+</template>
