--- a/app/client/reservation/reservation.html
+++ b/app/client/reservation/reservation.html
@@ -8,7 +8,7 @@
             <div class="ui fluid centered card">
                 <div class="content">
                     <form class="ui form">
-                        <h4 class="ui dividing header">Reserve a Table</h4>
+                        <h2 class="ui dividing header">Reserve a Table</h2>
                         <div class="field">
                             <label>Name</label>
                             <div class="two fields">
@@ -21,12 +21,15 @@
                             </div>
                         </div>
                         <div class="field">
-                            <label>Phone Number&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;E-Mail</label>
+
                             <div class="two fields">
                                 <div class="field">
+                                    <label>Phone Number</label>
                                     <input type="text" name="reservation[phone-number]" placeholder="XXX-XXX-XXXX">
                                 </div>
                                 <div class="field">
+                                    <label>Email</label>
+
                                     <input type="email" name="reservation[email]" placeholder="example@example.com">
                                 </div>
                             </div>
@@ -65,7 +68,7 @@
                                 </script>
                             </div>
                         </div>
-                        <button class="fluid ui positive button" type="submit">Confirm Reservation</button>
+                        <button class="fluid ui positive button">Confirm Reservation</button>
                     </form>
                 </div>
             </div>
