--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -7,9 +7,10 @@
 
 </template>
 
-<template name="table">
-    <div class="column">
-        <div class="ui inverted segment">
+<template name="table" >
+    <div class="column" >
+
+		<div class="ui raised inverted segment" style="color:white">
             {{#if isDirty}}
                 <a class="ui red right corner label">
                     <i class="trash outline icon"></i>
@@ -41,13 +42,6 @@
                 <!--<button class="ui teal button">Taken</button>-->
                 {{/if}}
 
-
-        </div>
+		</div>
     </div>
 </template>
-
-
-
-
-
-
