--- a/app/client/reservation/reservation.html
+++ b/app/client/reservation/reservation.html
@@ -13,10 +13,10 @@
                             <label>Name</label>
                             <div class="two fields">
                                 <div class="field">
-                                    <input type="text" name="reservation[first-name]" placeholder="First Name">
+                                    <input type="text" id="firstName" name="reservation[first-name]" placeholder="First Name">
                                 </div>
                                 <div class="field">
-                                    <input type="text" name="reservation[last-name]" placeholder="Last Name">
+                                    <input type="text" id="lastName" name="reservation[last-name]" placeholder="Last Name">
                                 </div>
                             </div>
                         </div>
@@ -25,12 +25,12 @@
                             <div class="two fields">
                                 <div class="field">
                                     <label>Phone Number</label>
-                                    <input type="text" name="reservation[phone-number]" placeholder="XXX-XXX-XXXX">
+                                    <input type="text" id="phoneNum" name="reservation[phone-number]" placeholder="XXX-XXX-XXXX">
                                 </div>
                                 <div class="field">
                                     <label>Email</label>
 
-                                    <input type="email" name="reservation[email]" placeholder="example@example.com">
+                                    <input type="email" id="email" name="reservation[email]" placeholder="example@example.com">
                                 </div>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                             <i class="big plus icon link" id="plus"></i>
                             <br>
                             <div class="value" id="count">
-                                0
+                                1
                             </div>
                         </div>
                         <label class="timeLabel">Pick a time:</label>
@@ -56,7 +56,7 @@
                                             <span class="input-group-addon">
                                                 <span class="glyphicon glyphicon-calendar"></span>
                                             </span>
-                                            <input type='text' class="form-control"/>
+                                            <input type='text' id ="date-time" class="form-control fluid field">
 
                                         </div>
                                     </div>
@@ -68,7 +68,7 @@
                                 </script>
                             </div>
                         </div>
-                        <button class="fluid ui positive button">Confirm Reservation</button>
+                        <button name=" " class="fluid ui positive button">Confirm Reservation</button>
                     </form>
                 </div>
             </div>
