--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -1,58 +1,56 @@
-<template name="orderQueue">
+<template name = "orderQueue">
 
-    <div class="ui sizer vertical segment">
-        <div class="ui center aligned huge header">Order Queue</div>
+    <div class = "ui sizer vertical segment">
+        <div class = "ui center aligned huge header">Order Queue</div>
     </div>
-{{#HammerTouchArea gestureMap=templateGestures}}
-    <div class="ui internally celled center aligned grid">
-      <div class="grey rounded spaced row">
-        <div class="two wide column">
-          Order ID
-        </div>
-        <div class="three wide column">
-          Item
-        </div>
-        <div class="two wide column">
-          Type
-        </div>
-        <div class="one wide column">
-          Quantity
-        </div>
-        <div class="eight wide column">
-          Description
-        </div>
-      </div>
+	
+	{{#HammerTouchArea gestureMap=templateGestures}}
+		<div class="ui internally celled center aligned grid">
+			<div class="grey rounded spaced row">
+				<div class="two wide column">
+				  Order ID
+				</div>
+				<div class="three wide column">
+				  Item
+				</div>
+				<div class="two wide column">
+				  Type
+				</div>
+				<div class="one wide column">
+				  Quantity
+				</div>
+				<div class="eight wide column">
+				  Description
+				</div>
+			</div>
 
-<!-- prints each orderRow depending on number of "Orders"-->
-        {{#each Orders}}
-            {{>orderRow}}
-        {{/each}}
-
-
-
-
-
-    </div>
+			<!-- prints each orderRow depending on number of "Orders"-->
+			{{#each orders}}
+				{{>orderRow}}
+			{{/each}}
+		</div>
     {{/HammerTouchArea}}
+
+			
 </template>
 
 
-<template name="orderRow">
+<template name = "orderRow">
 
-  <div class="white rounded row" id="hammertap">
-    <div class="two wide column">
-      145
+  <div class = "white rounded row" id="hammertap">
+    <div class = "two wide column">
+      {{orderID}}
     </div>
-    <div class="three wide column">
-      Fries
+    <div class = "three wide column">
+      {{menuItemID}}
     </div>
-    <div class="two wide column">
+    <div class = "two wide column">
       Appetizer
     </div>
-    <div class="one wide column">
+    <div class = "one wide column">
       2
     </div>
-    <div class="eight wide column">
+    <div class = "eight wide column">
       Classic
     </div>
   </div>
