Added resolved for ENUM type, and implemented frontend display based on ENUM type for type of order

--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -45,7 +45,7 @@
       {{menuItemID}}
     </div>
     <div class = "two wide column">
-      Appetizer
+      {{orderTypeResolved orderType}}
     </div>
     <div class = "one wide column">
       2
