--- a/app/client/waiter/waiter.html
+++ b/app/client/waiter/waiter.html
@@ -1,3 +1,38 @@
 <template name="waiter">
-    <h1>Waiter Interface, WIP</h1>
+    <!-- Navigation -->
+    <nav id="slide-menu">
+        <ul>
+            <li class="Appetizers">Appetizers</li>
+            <li class="Entrees">Entrees</li>
+            <li class="Desserts">Desserts</li>
+            <li class="sep payBill">Pay</li>
+            <li class="logout">Logout</li>
+        </ul>
+    </nav>
+    <!-- Content panel -->
+    <div id="content">
+        <div class="menu-trigger"></div>
+        <div id="appMenu">
+            <h1 class="ios">App</h1>
+            <p>Here's an easy way to create an iOS style, side sliding menu.</p>
+        </div>
+        <div id="entreeMenu" class="displayNone">
+            <h1 class="ios">Entrees</h1>
+            <p>Here's an easy way to create an iOS style, side sliding menu.</p>
+        </div>
+
+    </div>
+    <script>
+        (function() {
+            var $body = document.body
+                    , $menu_trigger = $body.getElementsByClassName('menu-trigger')[0];
+
+            if ( typeof $menu_trigger !== 'undefined' ) {
+                $menu_trigger.addEventListener('click', function() {
+                    $body.className = ( $body.className == 'menu-active' )? '' : 'menu-active';
+                });
+            }
+
+        }).call(this);
+    </script>
 </template>
