Added timers and changed double tap to button, added time add feature

--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -18,7 +18,10 @@
         <div class="one wide column">
           Quantity
         </div>
-        <div class="eight wide column">
+        <div class="one wide column">
+          Time
+        </div>
+        <div class="seven wide column">
           Description
         </div>
       </div>
@@ -63,8 +66,19 @@
     <div class="one wide column">
       2
     </div>
-    <div class="eight wide column">
+    <div class="one wide column" id="time">
+      1:00
+    </div>
+    <div class="five wide column">
       Classic
+    </div>
+    <div class="two wide column">
+      <button class="ui medium icon primary button" id="done-btn">
+        <i class="checkmark icon" id="done-btn-icon"></i>
+      </button>
+      <button class="ui medium icon disabled button" id="add-time-btn">
+        <i class="hourglass start icon" id="add-time-icon"></i>
+      </button>
     </div>
   </div>
 
