Modified the orderRow template to display the required information

--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -39,13 +39,13 @@
 
   <div class = "white rounded row" id="hammertap">
     <div class = "two wide column">
-      {{orderID}}
+      {{order.orderID}}
     </div>
     <div class = "three wide column">
-      {{menuItemID}}
+      {{order.menuItemID}}
     </div>
     <div class = "two wide column">
-      {{orderType}}
+      {{order.orderTypeName}}
     </div>
     <div class = "one wide column">
       2
