--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -39,13 +39,13 @@
 
   <div class = "white rounded row" id="hammertap">
     <div class = "two wide column">
-      {{order.orderID}}
+      {{orderID}}
     </div>
     <div class = "three wide column">
-      {{order.menuItemID}}
+      {{menuItemID}}
     </div>
     <div class = "two wide column">
-      {{order.orderTypeName}}
+      {{orderTypeName}}
     </div>
     <div class = "one wide column">
       2
