--- a/app/client/main.html
+++ b/app/client/main.html
@@ -3,7 +3,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
 <template name="loginPage">
-<body class="login">
+<body class="login" id="hello">
 {{>landingpage}}
 
 </body>
