--- a/app/client/waiter/waiter.html
+++ b/app/client/waiter/waiter.html
@@ -50,10 +50,10 @@
         </div>
     </div>
     <!--Drinks Menu Modal Start-->
-    <div class="ui modal" id="drinksModal">
+    <div class="ui scrolling modal" id="drinksModal">
         <i class="close icon"></i>
         <div class="header">
-            Modal Title
+            Select Drink(s)
         </div>
         <div class="image content">
             <div class="image">
