--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -43,7 +43,7 @@
       {{menuItemID}}
     </div>
     <div class = "two wide column">
-      {{orderTypeName}}
+      test
     </div>
     <div class = "one wide column">
       2
