--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -1,71 +1,67 @@
-<template name="orderQueue">
-
-    <div class="ui sizer vertical segment">
-        <div class="ui center aligned huge header">Order Queue</div>
+<template name = "orderQueue">
+	<div class = "ui sizer vertical segment">
+		<div class = "ui center aligned huge header">Order Queue</div>
     </div>
-    {{#HammerTouchArea gestureMap=templateGestures}}
-        <div class="ui internally celled center aligned grid">
-            <div class="grey rounded spaced row">
-                <div class="two wide column">
-                    Order ID
-                </div>
-                <div class="three wide column">
-                    Item
-                </div>
-                <div class="two wide column">
-                    Type
-                </div>
-                <div class="one wide column">
-                    Quantity
-                </div>
-                <div class="eight wide column">
-                    Description
-                </div>
-            </div>
-
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-            {{>orderRow}}
-        </div>
+	{{#HammerTouchArea gestureMap = templateGestures}}
+    <div class="ui internally celled center aligned grid">
+		<div class="grey rounded spaced row">
+			<div class="two wide column">
+				Order ID
+			</div>
+			<div class="three wide column">
+				Item
+			</div>
+			<div class="two wide column">
+				Type
+			</div>
+			<div class="one wide column">
+				Quantity
+			</div>
+			<div class="one wide column">
+				Time
+			</div>
+			<div class="seven wide column">
+				Description
+			</div>
+		</div>
+		<!-- prints each orderRow depending on number of "Orders"-->
+		{{#each orders}}
+			{{>orderRow}}
+		{{/each}}
+	</div>
     {{/HammerTouchArea}}
 </template>
 
 
-<template name="orderRow">
+<template name = "orderRow">
 
-    <div class="white rounded row" id="hammertap">
-        <div class="two wide column">
-            145
-        </div>
-        <div class="three wide column">
-            Fries
-        </div>
-        <div class="two wide column">
-            Appetizer
-        </div>
-        <div class="one wide column">
-            2
-        </div>
-        <div class="eight wide column">
-            Classic
-        </div>
+  <div class = "white rounded row" id="hammertap">
+    <div class = "two wide column">
+      {{orderID}}
     </div>
+    <div class = "three wide column">
+      {{menuItemID}}
+    </div>
+    <div class = "two wide column">
+      test
+    </div>
+    <div class = "one wide column">
+      2
+    </div>
+    <div class="one wide column" id="time">
+      1:00
+    </div>
+    <div class="five wide column">
+      Classic
+    </div>
+    <div class="two wide column">
+      <button class="ui medium icon primary button" id="done-btn">
+        <i class="checkmark icon" id="done-btn-icon"></i>
+      </button>
+      <button class="ui medium icon disabled button" id="add-time-btn">
+        <i class="hourglass start icon" id="add-time-icon"></i>
+      </button>
+    </div>
+  </div>
 
 </template>
