populated items in interface

--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -1,6 +1,6 @@
 <template name="floorplan">
 
-    <div class="ui four column grid">
+    <div class="ui four column grid" id="fourColumnGrid">
         {{#each tables}}
             {{>table}}
         {{/each}}
