add item button added

--- a/app/client/waiter/waiter.html
+++ b/app/client/waiter/waiter.html
@@ -77,10 +77,6 @@
                 {{/each}}
             </div>
         </div>
-        <div class="actions">
-            <div class="ui red deny button">Cancel</div>
-            <div class="ui green approve button">Add</div>
-        </div>
     </div>
     <!--Drinks Menu Modal End-->
     <script>
@@ -103,6 +99,10 @@
             <div class="content">
                 <a class="header">{{itemName}}</a>
             </div>
+            <div class="ui bottom attached button">
+                <i class="add icon"></i>
+                Add Item
+            </div>
         </div>
     </div>
 </template>
@@ -111,6 +111,10 @@
         <div class="ui fluid card" id="appCard">
             <div class="content">
                 <a class="header">{{itemName}}</a>
+            </div>
+            <div class="ui bottom attached button">
+                <i class="add icon"></i>
+                Add Item
             </div>
         </div>
     </div>
@@ -121,6 +125,10 @@
             <div class="content">
                 <a class="header">{{itemName}}</a>
             </div>
+            <div class="ui bottom attached button">
+                <i class="add icon"></i>
+                Add Item
+            </div>
         </div>
     </div>
 </template>
@@ -130,6 +138,11 @@
             <div class="content">
                 <a class="header">{{itemName}}</a>
             </div>
+            <div class="ui bottom attached button">
+                <i class="add icon"></i>
+                Add Item
+            </div>
+
         </div>
     </div>
 </template>
