--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -2,7 +2,7 @@
 	<div class = "ui sizer vertical segment">
 		<div class = "ui center aligned huge header">Order Queue</div>
     </div>
-	{{#HammerTouchArea gestureMap = templateGestures}}
+
     <div class="ui internally celled center aligned grid">
 		<div class="grey rounded spaced row">
 			<div class="two wide column">
@@ -29,17 +29,17 @@
             </div>
 		</div>
 		<!-- prints each orderRow depending on number of "Orders"-->
+
 		{{#each orders}}
 			{{>orderRow}}
 		{{/each}}
 	</div>
-    {{/HammerTouchArea}}
+
 </template>
 
 
 <template name = "orderRow">
-
-  <div class = "white rounded row" id="hammertap">
+  <div class = "white rounded row" id="tap">
     <div class = "two wide column">
       {{orderID}}
     </div>
@@ -53,7 +53,8 @@
       1
     </div>
     <div class="two wide column" id="time">
-      {{cookTime}}:00
+      <!--{{cookTime}}:00-->
+			00:10
     </div>
     <div class="four wide column" id = "scrollfeature">
       {{specialRequests}}
@@ -67,5 +68,13 @@
       </button>
     </div>
   </div>
+	<div class="white rounded row" id="undo">
+		<div class="sixteen wide column">
+		<button class="ui large icon primary button" id="undo-btn">
+			<i class="undo icon" id="done-btn-icon"></i>
+			Undo
+		</button>
+		</div>
+	</div>
 
 </template>
