fixed bug when timer expires when hit reset

--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -53,8 +53,7 @@
       1
     </div>
     <div class="two wide column" id="time">
-      <!--{{cookTime}}:00-->
-			00:10
+      {{cookTime}}:00
     </div>
     <div class="four wide column" id = "scrollfeature">
       {{specialRequests}}
