calling helper function in events

--- a/app/client/waiter/waiter.html
+++ b/app/client/waiter/waiter.html
@@ -73,7 +73,7 @@
             <br>
             <br>
             <div class="ui three column grid" id="currentOrder">
-                {{#each currentOrder}}
+                {{#each selected}}
                     {{>menuCards}}
                 {{/each}}
             </div>
