making unique order ID client side (incomplete)

--- a/app/client/waiter/waiter.html
+++ b/app/client/waiter/waiter.html
@@ -72,7 +72,7 @@
             <br>
             <br>
             <br>
-            <div class="ui three column grid" id="currentOrder">
+            <div class="ui three column grid">
                 {{#each currentOrder}}
                     {{>menuCards}}
                 {{/each}}
